# ip-change-watcher

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
docker/config/kafka/: server.properties
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
scripts/: generate-entities.sh  migrate.sh
src/: ip_fetcher.rs  kafka.rs  main.rs
src/database/: mod.rs
src/database/entities/: mod.rs  prelude.rs  public_ips.rs
