[package]
name = "ip-change-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "macros", "runtime-async-std-native-tls" ] }
